perf: add depedencies, remove unnecessary files

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "week-7-muhammad-avicena",
   "version": "1.0.0",
   "description": "Learning TypeScript and Backend Node",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node build/index.js"
   },
   "author": "Muhammad-Avicena",
   "license": "MIT",
