--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.7.20"
   }
 }
